--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "env-paths": "^2.2.0",
     "es6-error": "^4.1.1",
     "escape-string-regexp": "^4.0.0",
+    "express": "^4.21.2",
     "extract-zip": "^1.7.0",
     "fd-slicer": "^1.1.0",
     "fs-extra": "^8.1.0",
