--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "prepend-http": "^2.0.0",
     "process-nextick-args": "^2.0.1",
     "progress": "^2.0.3",
+    "proper-lockfile": "^4.1.2",
     "proto-list": "^1.2.4",
     "pump": "^3.0.0",
     "readable-stream": "^2.3.7",
