--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,13 @@
 /node_modules
 /.pnp
 .pnp.js
-
+/Picar-backend/picar-x
 # testing
 /coverage
 
 # production
 /build
-/venv
+*/venv
 
 # misc
 .env
@@ -23,6 +23,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/__pycache__/
-/.conda/
-/.vscode/
+*/__pycache__/
+*/.conda/
+*/.vscode/
+*/*.pyc
